--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "core-js": "^3.6.5",
     "pinia": "^2.0.0-rc.6",
     "postcss": "^7",
